objects/GLI_OC_Bulk_Load__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created to de-active the triggers,workflows,Validation rules,Process builders during Data Load</description>
    <fields>
        <fullName>APTS_Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Disable_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS Disable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Disable_Workflow_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS Disable Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>GLI_OC_Bulk_Load</label>
</CustomObject>